# influencelift-ai

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_CARD.md  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deployment-smoke.yml
.streamlit/: config.toml
api/: main.py  schemas.py
app/: Home.py
artifacts/: README.md
data/: README.md
data/sample/: synthetic_campaigns.csv
docs/: architecture.md  data-cleaning.md  deployment.md  model-development.md
docs/portfolio/: LinkedIn_Marketing_Kit.md  README.md  System_Design_Diagrams.md
notebooks/: case_study_analysis.ipynb
portfolio-assets/: README.md
portfolio-assets/docx/: Coding_Guide.docx  Coding_Interview_Workbook.docx  Interview_Question_Bank.docx  LinkedIn_Marketing_Kit.docx  Portfolio_Playbook.docx  System_Design_Diagram_Pack.docx  System_Design_Portfolio_Defense_Guide.docx
portfolio-assets/markdown/: Aarushi_Rai_InfluenceLift_Portfolio_Case_Study.md  Aarushi_Repo_README_Snippet.md  Coding_Guide.md  Coding_Interview_Workbook.md  Interview_Question_Bank.md  LinkedIn_Marketing_Kit.md  Portfolio_Playbook.md  System_Design_Diagram_Pack.md  System_Design_Portfolio_Defense_Guide.md
reports/: README.md
scripts/: generate_demo_data.py  predict.py  qa_local.ps1  train.py
src/influencelift/: __init__.py  cleaning.py  demo_data.py  (+3 more)
tests/: test_api.py  test_cleaning.py  test_modeling.py
