[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "influencelift-ai"
version = "1.0.0"
description = "Reliable influencer campaign sales forecasting from messy marketing data."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mohit Bhatnagar" }]
keywords = [
  "machine-learning",
  "marketing-analytics",
  "sales-forecasting",
  "influencer-marketing",
  "mlops",
]
dependencies = [
  "fastapi>=0.110,<1",
  "joblib>=1.3,<2",
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "pydantic>=2.6,<3",
  "scikit-learn>=1.4,<2",
  "streamlit>=1.36,<2",
  "uvicorn[standard]>=0.29,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1",
  "pytest>=8,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
]

[project.urls]
Homepage = "https://influencelift-ai.streamlit.app"
Demo = "https://influencelift-ai.streamlit.app"
Repository = "https://github.com/mohit231007/influencelift-ai"
Documentation = "https://github.com/mohit231007/influencelift-ai#readme"
Issues = "https://github.com/mohit231007/influencelift-ai/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = ["notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
